// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:tableview 1`] = `
<div>
  <div
    class="cxd-Alert cxd-Alert--danger"
  >
    <div
      class="cxd-Alert-content"
    >
      <div
        class="cxd-Alert-desc"
      >
        <h3>
          TypeError: (0 , amis_core_1.resolveMappingObject) is not a function
        </h3>
        <pre>
          <code>
            
    at TableViewRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis/src/renderers/TableView.tsx:86:42)
    at SchemaRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/SchemaRenderer.js:65:28)
    at div
    at ServiceRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis/src/renderers/Service.tsx:634:5)
    at StoreFactory (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/WithStore.js:34:36)
    at ScopedComponent (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/Scoped.js:210:32)
    at SchemaRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/SchemaRenderer.js:65:28)
    at div
    at div
    at div
    at div
    at PageRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis/src/renderers/Page.tsx:927:5)
    at StoreFactory (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/WithStore.js:34:36)
    at ScopedComponent (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/Scoped.js:210:32)
    at SchemaRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/SchemaRenderer.js:65:28)
    at RootRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/RootRenderer.js:33:28)
    at ImageGallery (/Users/hongyang03/baidu/amis/amis/packages/amis-ui/src/components/ImageGallery.tsx:24:1)
    at class_1 (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/locale.js:71:36)
    at class_1 (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/theme.js:94:36)
    at Root (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/Root.js:33:42)
    at ScopedComponent (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/Scoped.js:210:32)
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tableview layout 1`] = `
<div>
  <div
    class="cxd-Alert cxd-Alert--danger"
  >
    <div
      class="cxd-Alert-content"
    >
      <div
        class="cxd-Alert-desc"
      >
        <h3>
          TypeError: (0 , amis_core_1.resolveMappingObject) is not a function
        </h3>
        <pre>
          <code>
            
    at TableViewRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis/src/renderers/TableView.tsx:86:42)
    at SchemaRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/SchemaRenderer.js:65:28)
    at div
    at div
    at div
    at div
    at PageRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis/src/renderers/Page.tsx:927:5)
    at StoreFactory (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/WithStore.js:34:36)
    at ScopedComponent (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/Scoped.js:210:32)
    at SchemaRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/SchemaRenderer.js:65:28)
    at RootRenderer (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/RootRenderer.js:33:28)
    at ImageGallery (/Users/hongyang03/baidu/amis/amis/packages/amis-ui/src/components/ImageGallery.tsx:24:1)
    at class_1 (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/locale.js:71:36)
    at class_1 (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/theme.js:94:36)
    at Root (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/Root.js:33:42)
    at ScopedComponent (/Users/hongyang03/baidu/amis/amis/packages/amis-core/lib/Scoped.js:210:32)
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;
